--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -32,6 +32,7 @@ jobs:
     permissions: write-all
     runs-on: ${{ matrix.runner }}
     # runs-on: ubuntu-latest
+    if: ${{ contains(matrix.build.platforms, "arm64")}}
     needs: config-yaml
     strategy:
       fail-fast: false
