--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,9 @@ upstream:
   tag: 5.8.0
 builds:
   - os: alpine_3.18
-    platforms: [linux/amd64, linux/arm64]
+    arch: linux/amd64
+  - os: alpine_3.18
+    arch: linux/arm64
   # - os: alpine_3.19
   #   platforms: [linux/amd64, linux/arm64]
   # - os: archlinux_latest
