--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -52,5 +52,11 @@ jobs:
           path: taskfiles
           repository: bradfordwagner/taskfiles
           ref: feature/arm
-      - name: test
-        run: echo hi friends
+      - name: task=branches
+        run: |
+          build=$(echo '${{ toJson(matrix.build) }}'  | jq -rc '.')
+          task -t ./taskfiles/tasks/containers/ansible.yml \
+            build \
+            build=${build} \
+            target_tag=latest \
+            is_tag=false
