--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -53,5 +53,11 @@ jobs:
           path: taskfiles
           repository: bradfordwagner/taskfiles
           ref: feature/arm
-      - name: test
-        run: echo hi friends
+      - name: task=tags
+        run: |
+          build=$(echo '${{ toJson(matrix.build) }}'  | jq -rc '.')
+          task -t ./taskfiles/tasks/containers/ansible.yml \
+            build \
+            build=${build} \
+            target_tag=${{ github.ref_name }} \
+            is_tag=true
