--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -54,7 +54,7 @@ jobs:
       - name: task=tags
         run: |
           build=$(echo '${{ toJson(matrix.build) }}'  | jq -rc '.')
-          task -t ./taskfiles/tasks/containers/ansible.yml \
+          ./bin/task -t ./taskfiles/tasks/containers/ansible.yml \
             build \
             build=${build} \
             target_tag=${{ github.ref_name }} \
