--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -22,6 +22,7 @@ jobs:
         uses: dcarbone/install-jq-action@v2
         with:
           version: 1.7
+      
       - name: export=config
         id: config
         run: echo "config=$(yq -oj '.' config.yaml | jq -cr)" >> $GITHUB_OUTPUT
@@ -58,6 +59,11 @@ jobs:
           yq-version: v4.43.1
       - name: yq=version
         run: yq --version
+      
+      - name: jq=1.7
+        uses: dcarbone/install-jq-action@v2
+        with:
+          version: 1.7
       - name: task=branches
         run: |
           build=$(echo '${{ toJson(matrix.build) }}'  | jq -rc '.')
