--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -72,3 +72,12 @@ jobs:
             build=${build} \
             target_tag=latest \
             is_tag=false
+      manifest_tool_steps: |
+        - name: Push manifest
+          uses: pixelfederation/gh-action-manifest-tool@v0.1.7
+          with:
+            username: ${{ github.actor }}
+            password: ${{ github.token }}
+            platforms: linux/amd64,linux/arm64
+            template: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:-ARCH
+            target: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:
