--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -73,3 +73,12 @@ jobs:
             build=${build} \
             target_tag=${{ github.ref_name }} \
             is_tag=true
+      manifest_tool_steps: |
+        - name: Push manifest
+          uses: pixelfederation/gh-action-manifest-tool@v0.1.7
+          with:
+            username: ${{ github.actor }}
+            password: ${{ github.token }}
+            platforms: linux/amd64,linux/arm64
+            template: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:$${{ github.ref_name }}-ARCH
+            target: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:$${{ github.ref_name }}
