--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -78,5 +78,5 @@ jobs:
             username: ${{ github.actor }}
             password: ${{ github.token }}
             platforms: linux/amd64,linux/arm64
-            template: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:-ARCH
-            target: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:
+            template: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:latest-ARCH
+            target: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:latest
