--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -73,6 +73,7 @@ jobs:
             target_tag=latest \
             is_tag=false
       - name: Push manifest
+        continue-on-error: true
         uses: pixelfederation/gh-action-manifest-tool@v0.1.7
         with:
           username: ${{ github.actor }}
