--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -80,5 +80,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
           platforms: linux/amd64,linux/arm64
-          template: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:${{ github.ref_name }}-ARCH
+          template: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:${{ github.ref_name }}-OS_ARCH
           target: ${{ fromJSON(needs.config-yaml.outputs.config).target_repo }}:${{ github.ref_name }}
