--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -73,7 +73,8 @@ jobs:
             build=${build} \
             target_tag=${{ github.ref_name }} \
             is_tag=true
-      - name: Push manifest
+      
+      - name: manifest_tool
         continue-on-error: true
         uses: pixelfederation/gh-action-manifest-tool@v0.1.7
         with:
