--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -65,6 +65,13 @@ jobs:
         uses: dcarbone/install-jq-action@v2
         with:
           version: 1.7
+      
+      - uses: docker/login-action@v3
+        name: login=ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       - name: task=tags
         run: |
           build=$(echo '${{ toJson(matrix.build) }}'  | jq -rc '.')
