--- a/config.yaml
+++ b/config.yaml
@@ -10,21 +10,54 @@ builds:
   - os: alpine_3.18
     arch: linux/arm64
     runs_on: arm64
-  # - os: alpine_3.19
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: archlinux_latest
-  #   platforms: [linux/amd64]
-  # - os: debian_bookworm
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: debian_bookworm-slim
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: rockylinux_8
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: rockylinux_9
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: ubuntu_jammy
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: ubuntu_mantic
-  #   platforms: [linux/amd64, linux/arm64]
-  # - os: ubuntu_noble
-  #   platforms: [linux/amd64, linux/arm64]
+  - os: alpine_3.19
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: alpine_3.19
+    arch: linux/arm64
+    runs_on: arm64
+  - os: archlinux_latest
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: debian_bullseye
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: debian_bullseye
+    arch: linux/arm64
+    runs_on: arm64
+  - os: debian_bookworm-slim
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: debian_bookworm-slim
+    arch: linux/arm64
+    runs_on: arm64
+  - os: rockylinux_8
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: rockylinux_8
+    arch: linux/arm64
+    runs_on: arm64
+  - os: rockylinux_9
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: rockylinux_9
+    arch: linux/arm64
+    runs_on: arm64
+  - os: ubuntu_jammy
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: ubuntu_jammy
+    arch: linux/arm64
+    runs_on: arm64
+  - os: ubuntu_mantic
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: ubuntu_mantic
+    arch: linux/arm64
+    runs_on: arm64
+  - os: ubuntu_noble
+    arch: linux/amd64
+    runs_on: ubuntu-latest
+  - os: ubuntu_noble
+    arch: linux/arm64
+    runs_on: arm64
