--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,11 @@
 ---
 - hosts: localhost
   vars:
-    jq_ver: 1.6
+    jq_ver: 1.7.1
   roles:
     - role: andrewrothstein.jq
-
+  tasks:
+    - name: smoketest installed binaries are added to path
+      command: "{{ item }}"
+      loop:
+        - jq -h
