--- a/.github/workflows/ansible_playbook_tags.yml
+++ b/.github/workflows/ansible_playbook_tags.yml
@@ -20,76 +20,16 @@ jobs:
           # write your own scoped version of the following since  is not available at this base level
           # echo product=$(./bin/dagger -m  call product-json --src=. --version=${{ env.version }}) >> $GITHUB_OUTPUT
           echo product=$(./bin/dagger -m github.com/bradfordwagner/dagger-modules/ansible@feature/ansible call product-json --src=. --version=${version}) >> $GITHUB_OUTPUT
-  matrix-builds:
-    name: ${{ matrix.build.os }}-${{ matrix.build.arch }}
+  builds:
+    runs-on: ${{ matrix.product.runner }}
     permissions: write-all
-    runs-on: ${{ matrix.build.runs_on }}
     needs: product
+    name: ${{ matrix.product.index }}:${{ matrix.product.os }} (${{ matrix.product.arch }})
     strategy:
       fail-fast: false
       matrix:
-        build: ${{ fromJSON(needs.product.outputs.config).builds }}
+        product: ${{ fromJSON(needs.product.outputs.product) }}
     steps:
-      - name: checkout=self
-        uses: actions/checkout@v4
-      - name: task=latest
-        run: |
-          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
-          export PATH=$(pwd)/bin:$PATH
-      - name: task=version
-        run: ./bin/task --version
-      - name: checkout=taskfiles@feature/arm
-        uses: actions/checkout@v4
-        with:
-          path: taskfiles
-          repository: bradfordwagner/taskfiles
-          ref: feature/arm
-      
-      # https://github.com/chrisdickinson/setup-yq/blob/latest/action.yml
-      - uses: chrisdickinson/setup-yq@v1.0.1
-        name: yq=v4.43.1
-        with:
-          yq-version: v4.43.1
-      - name: yq=version
-        run: yq --version
-      
-      - name: jq=1.7
-        uses: dcarbone/install-jq-action@v2
-        with:
-          version: 1.7
-      
-      # work around other runner's logging out removing credentials
-      # https://github.com/docker/login-action/issues/173#issuecomment-1079688020
-      - name: Set DOCKER_CONFIG
-        run: |
-          id=docker_configs/$(uuidgen)
-          mkdir -p $HOME/${id}/.docker
-          echo "DOCKER_CONFIG=$HOME/${id}/.docker" >> $GITHUB_ENV
-      - uses: docker/login-action@v3
-        name: login=ghcr.io
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-          logout: false
-      - name: task=tags
-        run: |
-          build=$(echo '${{ toJson(matrix.build) }}'  | jq -rc '.')
-          ./bin/task -t ./taskfiles/tasks/containers/ansible.yml \
-            build \
-            build=${build} \
-            target_tag=${{ github.ref_name }} \
-            is_tag=true
-      
-      manifest:
-        runs-on: arm64
-        permissions: write-all
-        needs: builds
-        name: manifest-tool
-        env:
-          actor: ${{ github.actor }}
-          token: ${{ github.token }}
-        steps:
       - uses: actions/checkout@v4
       - name: dagger=0.11.8
         run: |
@@ -108,11 +48,47 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
           logout: false
-          - name: dagger=manifest
-            id: config
-            run: |
-              ./bin/dagger -m github.com/bradfordwagner/dagger-modules/ansible@feature/ansible call manifest \
-                --src=. \
-                --version=${version} \
-                --actor=env:actor \
-                --token=env:token
+      - name: dagger=build
+        run: |
+          ./bin/dagger -m github.com/bradfordwagner/dagger-modules/ansible@feature/ansible call build \
+            --src=. \
+            --index=${{ matrix.product.index }} \
+            --version=${version} \
+            --isDev=false \
+            --flavor=playbook
+    
+    manifest:
+      runs-on: arm64
+      permissions: write-all
+      needs: builds
+      name: manifest-tool
+      env:
+        actor: ${{ github.actor }}
+        token: ${{ github.token }}
+      steps:
+      - uses: actions/checkout@v4
+      - name: dagger=0.11.8
+        run: |
+          curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.11.8 sh
+      # work around other runner's logging out removing credentials
+      # https://github.com/docker/login-action/issues/173#issuecomment-1079688020
+      - name: Set DOCKER_CONFIG
+        run: |
+          id=docker_configs/$(uuidgen)
+          mkdir -p $HOME/${id}/.docker
+          echo "DOCKER_CONFIG=$HOME/${id}/.docker" >> $GITHUB_ENV
+      - uses: docker/login-action@v3
+        name: login=ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+          logout: false
+        - name: dagger=manifest
+          id: config
+          run: |
+            ./bin/dagger -m github.com/bradfordwagner/dagger-modules/ansible@feature/ansible call manifest \
+              --src=. \
+              --version=${version} \
+              --actor=env:actor \
+              --token=env:token
