--- a/.github/workflows/ansible_playbook_branches.yml
+++ b/.github/workflows/ansible_playbook_branches.yml
@@ -62,4 +62,38 @@ jobs:
             --version=${version} \
             --isDev=false \
             --flavor=playbook
-  
+  manifest:
+    runs-on: arm64
+    permissions: write-all
+    needs: builds
+    name: manifest-tool
+    env:
+      actor: ${{ github.actor }}
+      token: ${{ github.token }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: dagger=0.13.6
+        run: |
+          curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.13.6 sh
+      # work around other runner's logging out removing credentials
+      # https://github.com/docker/login-action/issues/173#issuecomment-1079688020
+      - name: Set DOCKER_CONFIG
+        run: |
+          id=docker_configs/${RANDOM}
+          mkdir -p $HOME/${id}/.docker
+          echo "DOCKER_CONFIG=$HOME/${id}/.docker" >> $GITHUB_ENV
+      - uses: docker/login-action@v3
+        name: login=ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          logout: false
+      - name: dagger=manifest
+        id: config
+        run: |
+          ./bin/dagger -m github.com/bradfordwagner/dagger-modules/ansible@feature/0.13 call manifest \
+            --src=. \
+            --version=${version} \
+            --actor=env:actor \
+            --token=env:token
