--- a/.github/workflows/container_branches.yml
+++ b/.github/workflows/container_branches.yml
@@ -64,3 +64,39 @@ jobs:
             --version=${version}
 # publish stage
 # flavor=ansible_playbook
+  manifest:
+    runs-on: ubuntu-latest
+    permissions: write-all
+    needs: builds
+    name: manifest-tool
+    env:
+      actor: ${{ github.actor }}
+      token: ${{ github.token }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: dagger=0.15.2
+        run: |
+          curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.15.2 sh
+      # work around other runner's logging out removing credentials
+      # https://github.com/docker/login-action/issues/173#issuecomment-1079688020
+      - name: Set DOCKER_CONFIG
+        run: |
+          id=docker_configs/${RANDOM}
+          mkdir -p $HOME/${id}/.docker
+          echo "DOCKER_CONFIG=$HOME/${id}/.docker" >> $GITHUB_ENV
+      - uses: docker/login-action@v3
+        name: login=ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          logout: false
+      - name: dagger=manifest
+        id: config
+        run: |
+          set -x
+          ./bin/dagger -m https://github.com/bradfordwagner/dagger-container-builds@feature/ansible call manifest \
+            --src=. \
+            --version=${version} \
+            --actor=env:actor \
+            --token=env:token
