--- a/config.yaml
+++ b/config.yaml
@@ -24,10 +24,6 @@ builds:
       archs:
         - linux/amd64
         - linux/arm64
-    - os: rockylinux_8
-      archs:
-        - linux/amd64
-        - linux/arm64
     - os: rockylinux_9
       archs:
         - linux/amd64
@@ -36,7 +32,7 @@ builds:
       archs:
         - linux/amd64
         - linux/arm64
-    - os: ubuntu_mantic
+    - os: ubuntu_plucky
       archs:
         - linux/amd64
         - linux/arm64
